syntax = "proto3";

package course;
option go_package = "github.com/JeppeKorgaard98/mAssignment1;course";

service Courses {
    rpc GetCourseList (GetCourseListRequest) returns (GetCourseListReply) {}
}

//defines what we can send along with the request 
//this means we can potentially send along the id for which course we want to get the rating of
message GetCourseListRequest {}

//this is defininf what we can get out
message GetCourseListReply {
    string message = 1;
    //could potentially define an id or rating that we also want to receive
}